--- a/tutorials/peak-motifs_tutorial.html
+++ b/tutorials/peak-motifs_tutorial.html
@@ -225,14 +225,14 @@ div.tocify {
 <p>For the current tutorial we will be using, preferentially, the <a href="http://plants.rsat.eu/"><strong>RSAT::Plants</strong> server (http://plants.rsat.eu/)</a>, where the <em>Arabidopsis thaliana</em> genome is installed (we will use assembly TAIR10.37).</p>
 </div>
 </div>
-<div id="materials" class="section level2">
-<h2>Materials</h2>
-<div id="tools" class="section level3">
-<h3>Tools</h3>
+<div id="material" class="section level2">
+<h2>Material</h2>
+<div id="rsat-tools-used-in-this-tutorial" class="section level3">
+<h3>RSAT tools used in this tutorial</h3>
 <ol style="list-style-type: decimal">
-<li><p><em>sequences from bedbed/gff/vcf</em>: Retrieves sequences from a genome given a set of coordinates</p></li>
-<li><p><em>peak-motifs</em>: discover exceptional motifs from a set of peak sequences, based on a combination of motif discovery algorithms relying on different criteria (enrichment, positional bias, local enrichment).</p></li>
-<li><p><em>matrix-clustering</em>: identify similarities across a collection of motifs.</p></li>
+<li><p><strong><em>sequences from bedbed/gff/vcf</em></strong>: Retrieves sequences from a genome given a set of coordinates</p></li>
+<li><p><strong><em>peak-motifs</em></strong>: discover exceptional motifs from a set of peak sequences, based on a combination of motif discovery algorithms relying on different criteria (enrichment, positional bias, local enrichment).</p></li>
+<li><p><strong><em>matrix-clustering</em></strong>: identify similarities across a collection of motifs.</p></li>
 </ol>
 </div>
 <div id="study-case" class="section level3">
