--- a/tutorials/peak-motifs_tutorial.html
+++ b/tutorials/peak-motifs_tutorial.html
@@ -253,15 +253,17 @@ div.tocify {
 <div id="retrieving-chip-seq-peaks-sequences-from-the-tair10.37-genome" class="section level3">
 <h3>Retrieving ChIP-seq peaks sequences from the TAIR10.37 genome</h3>
 <ol style="list-style-type: decimal">
-<li><p>Open in a separate window a connection to the the <a href="http://plants.rsat.eu/">RSAT::Plants server</a> server.</p></li>
-<li><p>In the left-sided menu, find the tool named <em>sequences from bed/gff/vcf</em> (you can either click on <strong>view all tools</strong>, or use the search box at the top of the tool pane.</p></li>
+<li><p>In a separate window, open a connection to the the <a href="http://plants.rsat.eu/">RSAT::Plants server</a> server.</p></li>
+<li><p>In the left-sided menu, find the tool named <strong><em>sequences from bed/gff/vcf</em></strong> (you can either click on <strong>view all tools</strong>, or use the search box at the top of the tool pane.</p></li>
 <li><p>Start typing the name of the organism of interest, in this case <em>Arabidopsis</em>. While you do this, the Web form will provide the possible completions for the organism name. Select <em>Arabidopsis thaliana.TAIR10.37</em>.</p></li>
 <li><p>To specify the <strong>genomic coordinates</strong> you can either <strong>upload</strong> a file from your computer (e.g. the file that you downloaded in the previous section), or directly paste the link (e.g. ftp site above) in the <strong>URL</strong> textbox.</p></li>
-<li><p>Optionally, you can select email output in order to be notified of the query submission and completion (you shoud thus receive 2 separate emails for aach query).</p></li>
-<li><p>After a few seconds, the server displays a link to the output file, which contains the fasta-formatted sequences of the peaks. You can either download the fasta sequences to your computer, or save the URL, that will be used for following steps<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>.</p></li>
+<li><p>Set the <strong>Output</strong> opton to <em>server</em>.</p>
+<p><em>Optionally</em>, you can select email output in order to be notified of the query submission and completion (you shoud thus receive 2 separate emails for aach query).</p></li>
+<li><p>After a few seconds, the server displays a table with links to the input and output files. This includes contains the fasta-formatted sequences of the peaks.</p>
+<p><em>Optionally</em>, you can download the fasta sequences to your computer, to keep a trace of the results. You can also save the URL, that can be used for following steps<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>.</p></li>
 </ol>
 <div class="figure">
-<img src="figures/Figure2.png" title="Figure2" alt="Figure2: Screenshot of the sequences from bed/gff/vcf form. Note that the second DEMO will authomatically fill in the data of this tutorial" />
+<img src="figures/Figure2_retrieve-seq-bed_form.png" title="Figure2" alt="Figure2: Screenshot of the sequences from bed/gff/vcf form. Note that the second DEMO will authomatically fill in the data of this tutorial" />
 <p class="caption">Figure2: Screenshot of the <em>sequences from bed/gff/vcf</em> form. Note that the second <strong>DEMO</strong> will authomatically fill in the data of this tutorial</p>
 </div>
 </div>
