--- a/tutorials/peak-motifs_tutorial.html
+++ b/tutorials/peak-motifs_tutorial.html
@@ -280,9 +280,9 @@ div.tocify {
 <div id="discovering-over-represented-motifs-in-the-set-of-peak-sequences" class="section level3">
 <h3>Discovering over-represented motifs in the set of peak sequences</h3>
 <p>If you ran the last step of the previous section, you should already have a <strong>peak-motif</strong> form pre-filled with the URL of your fasta sequences. If this is the case, you can skip the two first steps, which are useful if you dispose of your own fasta file to analyse.</p>
-<p>1.In the left-sided menu, find the tool <strong>peak-motifs</strong>.</p>
-<ol start="2" style="list-style-type: decimal">
-<li><p>For the <strong>Peak sequences</strong> option set, paste the URL of the fasta sequence file obtained in the previous section (alternatively, you can upload the fasta file from your local copy but this will take more time-.</p></li>
+<ol style="list-style-type: decimal">
+<li><p>In the left-sided menu, find the tool <strong>peak-motifs</strong>.</p></li>
+<li><p>For the <strong>Peak sequences</strong> option set, paste the URL of the fasta sequence file obtained in the previous section (alternatively, you can upload the fasta file from your local copy but this will take more time.</p></li>
 <li><p>Type an appropriate <strong>tittle</strong> for the analysis, for example: <em>A. Thaliana MYB3R3 vs GFP - GSM1482283</em>.</p></li>
 <li><p>Explore the other options! We will discuss them during the training session.</p></li>
 <li><p>Specify a transcription factor database that will be used to associate the discovered motifs putative bound factors. For this dataset we will select <strong>footprintDB-plants</strong>. Note that the tool also allows you to upload a custom motif collection in Transfac format.</p></li>
