--- a/tutorials/peak-motifs_tutorial.html
+++ b/tutorials/peak-motifs_tutorial.html
@@ -208,6 +208,27 @@ div.tocify {
 </div>
 
 
+<div id="resources" class="section level2">
+<h2>Resources</h2>
+<table>
+<thead>
+<tr class="header">
+<th>Resource</th>
+<th>Description + URL</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>RSAT</td>
+<td>Regulatory Sequence Analysis Tools portal: <a href="http://rsat.eu/" class="uri">http://rsat.eu/</a></td>
+</tr>
+<tr class="even">
+<td>Plant RSAT</td>
+<td>RSAT for plant genomes <a href="http://plants.rsat.eu/" class="uri">http://plants.rsat.eu/</a></td>
+</tr>
+</tbody>
+</table>
+</div>
 <div id="high-troughput-characterization-of-regulatory-regions" class="section level2">
 <h2>High-troughput characterization of regulatory regions</h2>
 <p>The ChIP-seq technology permits to determine experimentally all the DNA binding locations of a transcription factor, as well as diverse histone modifications related to epigenetic regulatioN.</p>
