--- a/tutorials/peak-motifs_tutorial.html
+++ b/tutorials/peak-motifs_tutorial.html
@@ -304,7 +304,7 @@ div.tocify {
 <ol style="list-style-type: decimal">
 <li><p>In the left-sided menu, find the tool <strong>peak-motifs</strong>.</p></li>
 <li><p>For the <strong>Peak sequences</strong> option set, paste the URL of the fasta sequence file obtained in the previous section (alternatively, you can upload the fasta file from your local copy but this will take more time.</p></li>
-<li><p>Type an appropriate <strong>tittle</strong> for the analysis, for example: <em>A. Thaliana MYB3R3 vs GFP - GSM1482283</em>.</p></li>
+<li><p>Type an appropriate <strong>Title</strong> for the analysis, for example: <em>A. Thaliana MYB3R3 vs GFP - GSM1482283</em>.</p></li>
 <li><p>Explore the other options! We will discuss them during the training session.</p></li>
 <li><p>Specify a transcription factor database that will be used to associate the discovered motifs putative bound factors. For this dataset we will select <strong>footprintDB-plants</strong>.</p>
 <p>Note that the tool also allows you to upload a custom motif collection in Transfac format.</p></li>
